Comments/spacing/fixed minor details
- Changed getuserpost from retrieving to user with id 1 instead of the logged in user
- fixed header in mainpage not passing functions

--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -3,8 +3,7 @@
 }
 
 .header-layout {
-	padding: 9px 20px;
-	position: relative;
+	color: '#FFFFFF',
 }
 
 .logo-style {
